# Notepad

./: .gitignore  CMakeLists.txt  LICENSE  README.md  designclass.txt
src/: CMakeLists.txt  Document.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp  resources.qrc
